--- a/Client/Dt.Sample/Dt.Sample.csproj
+++ b/Client/Dt.Sample/Dt.Sample.csproj
@@ -11,8 +11,35 @@
   <Import Project="..\Common\dtc.props" />
 
   <ItemGroup>
+    <None Remove="Charts\AggregateChart.xaml" />
     <None Remove="Charts\BaseChart.xaml" />
     <None Remove="Charts\ChartHome.xaml" />
+    <None Remove="Charts\ChartLabel.xaml" />
+    <None Remove="Charts\ComplexChart.xaml" />
+    <None Remove="Charts\DataChart.xaml" />
+    <None Remove="Charts\FinancialChart.xaml" />
+    <None Remove="Charts\GanttChart.xaml" />
+    <None Remove="Charts\InteractiveChart.xaml" />
+    <None Remove="Charts\LiveChart.xaml" />
+    <None Remove="Charts\LoadAnimation.xaml" />
+    <None Remove="Charts\MarkersChart.xaml" />
+    <None Remove="Charts\PlotAreas.xaml" />
+    <None Remove="Charts\StackedPie.xaml" />
+    <None Remove="Resource\browsers.csv" />
+    <None Remove="Resource\健康档案1000.json" />
+    <None Remove="Resource\健康档案200.json" />
+    <None Remove="Resource\健康档案50.json" />
+    <None Remove="Resource\成绩(交叉表).json" />
+    <None Remove="Resource\成绩.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resource\browsers.csv" />
+    <EmbeddedResource Include="Resource\健康档案50.json" />
+    <EmbeddedResource Include="Resource\健康档案200.json" />
+    <EmbeddedResource Include="Resource\健康档案1000.json" />
+    <EmbeddedResource Include="Resource\成绩%28交叉表%29.json" />
+    <EmbeddedResource Include="Resource\成绩.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,11 +50,47 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Include="Charts\AggregateChart.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Charts\ChartHome.xaml">
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Charts\BaseChart.xaml">
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Charts\ChartLabel.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\ComplexChart.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\DataChart.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\FinancialChart.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\GanttChart.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\InteractiveChart.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\LiveChart.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\LoadAnimation.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\MarkersChart.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\PlotAreas.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\StackedPie.xaml">
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="SamplesMain.xaml" />
 
