--- a/Client/Dt.Sample/Dt.Sample.csproj
+++ b/Client/Dt.Sample/Dt.Sample.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
     <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
+    <ProjectReference Include="..\Dt.App\Dt.App.csproj" />
     <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj" />
     <ProjectReference Include="..\Dt.Charts\Dt.Charts.csproj" />
   </ItemGroup>
